Agrego la funcion de volver a la pagina principal

--- a/recipes/canelones.html
+++ b/recipes/canelones.html
@@ -30,5 +30,6 @@
         <li>Una vez que lo tengamos ya cocido la ponemos en un paño de algodón y procedemos a rellenarlos. Ponemos una pequeña cantidad de carne en la lámina de pasta y cerramos con mucho cuidado.</li>
         <li>Con el horno precalentado, colocamos en una fuente de horno todo los canelones formados y cubrimos con la salsa bechamel y con queso rallado. La receta de la bechamel os la dejo para que podáis hacerla y seguir los consejos que indico en el post. Introducimos al horno a 200º durante unos 10 minutos y terminamos los últimos 3 minutos con el gratinador.</li>
     </ol>
+    <a href="../index.html">Volver a la pagina principal</a>
 </body>
 </html>
