Agrego la funcion de volver a la pagina principal

--- a/recipes/sorrentinos.html
+++ b/recipes/sorrentinos.html
@@ -23,5 +23,6 @@
         <li>Pasado el tiempo de amasado la vamos a tapar con un repasador o envolver con un film y dejar descansar por 30 minutos.</li>
         <li>Estirar la masa fina, con el palo de amasar o con la máquina de pasta, espolvoreando con harina o maicena.</li>
     </ol>
+    <a href="../index.html">Volver a la pagina principal</a>
 </body>
 </html>
