--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Recetas</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Receta de Lasagna</a></li>
-        <li><a href="./recipes/sorrentinos.html">Receta de Sorrentinos</a></li>
-        <li><a href="./recipes/canelones.html">Receta de Canelones</a></li>
-    </ul>
+    <div>
+        <ul>
+            <li ><a href="./recipes/lasagna.html" class="links">Receta de Lasagna</a></li>
+            <li><a href="./recipes/sorrentinos.html" class="links">Receta de Sorrentinos</a></li>
+            <li><a href="./recipes/canelones.html" class="links">Receta de Canelones</a></li>
+        </ul>
+    </div>
 </body>
 </html>
