Actualizacion de archivos para soportar css

--- a/recipes/canelones.html
+++ b/recipes/canelones.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
     <img src="./img/canelones.jpg" alt="Imagen de unos canelones hechos"
     height="300" width="300">
     <h3></h3>
-    <h3>Ingredientes</h3>
+    <h3 class="titulos">Ingredientes</h3>
     <ul>
         <li>500 gramos de carne picada</li>
         <li>Una cebolla</li>
@@ -21,7 +22,7 @@
         <li>100 gramos de mantequilla</li>
         <li>100 gramos de harina</li>
     </ul>
-    <h3>Pasos</h3>
+    <h3 class="titulos">Pasos</h3>
     <ol>
         <li>Para hacer canelones caseros comenzaremos con el relleno. Pochamos la cebolla y el pimiento verde a fuego lento.</li>
         <li>Una vez pochado agregamos la carne picada, salpimentamos</li>
