--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
     <img src="./img/lasagna.jpg" alt="Imagen de una lasagna hecha"
     height="250" width="425">
     <h3></h3>
-    <h3>Ingredientes</h3>
+    <h3 class="titulos">Ingredientes</h3>
     <ul>
         <li>500 g. de carne</li>
         <li>2 pimientos rojos</li>
@@ -25,7 +26,7 @@
         <li>Sal y pimienta negra recién molida</li>
         <li>12 láminas de lasaña o lasagna Garofalo</li>
     </ul>
-    <h3>Pasos</h3>
+    <h3 class="titulos">Pasos</h3>
     <ol>
         <li>Calentamos una cazuela grande de agua, la más ancha de casa. Cuando empiece a hervir echamos 2 puñados generosos de sal.</li>
         <li>Introducimos las láminas de lasaña una a una sin que se toquen (para que no se peguen entre ellas). Ahora podemos encontrar infinidad de tipos de lasaña donde no hace hidratarla como se hacía antes. En casa muchas veces para ahorrar tiempo empleo las que se hidratan con la bechamel y el jugo que suelta la salsa al hornear.</li>
