--- a/recipes/sorrentinos.html
+++ b/recipes/sorrentinos.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <title>Document</title>
 </head>
 <body>
@@ -9,14 +10,14 @@
     <img src="./img/sorrentinos.jpg" alt="Imagen de unos sorrentinos hechos"
     height="250" width="425">
     <h3></h3>
-    <h3>Ingredientes</h3>
+    <h3 class="titulos">Ingredientes</h3>
     <ul>
         <li>100 gr. de harina</li>
         <li>1 huevo</li>
         <li>1 cucharada de aceite de oliva</li>
         <li>sal</li>
     </ul>
-    <h3>Pasos</h3>
+    <h3 class="titulos">Pasos</h3>
     <ol>
         <li>En un bol armamos una corona de harina, le agregamos sal, un huevo y una cucharada de aceite de oliva por persona</li>
         <li>Una vez tengamos todos los ingredientes incorporados pasamos a la mesada y vamos a amasar 15 minutos.</li>
