Rediseño del menu

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <div>
-        <ul>
-            <li ><a href="./recipes/lasagna.html" class="links">Receta de Lasagna</a></li>
-            <li><a href="./recipes/sorrentinos.html" class="links">Receta de Sorrentinos</a></li>
-            <li><a href="./recipes/canelones.html" class="links">Receta de Canelones</a></li>
-        </ul>
+        <div class="link lasagna"><a href="./recipes/lasagna.html" class="links">Receta de Lasagna</a></div>
+        <div class="link sorrentino"><a href="./recipes/sorrentinos.html" class="links">Receta de Sorrentinos</a></div>
+        <div class="link canelon"><a href="./recipes/canelones.html" class="links">Receta de Canelones</a></div>
     </div>
 </body>
 </html>
